feat: add all entities and bug fixes