@@ -1,18 +1,17 @@
 package com.fintrack.api.service;
 
 import com.fintrack.api.dto.CategoryDto;
+import com.fintrack.api.entity.Category;
 import com.fintrack.api.mapper.CategoryMapper;
-import com.fintrack.api.model.Category;
 import com.fintrack.api.repository.CategoryRepository;
-
-import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 /**
- * service for managing categories
+ * Service for managing categories.
  */
 @Service
 @RequiredArgsConstructor
@@ -22,7 +21,7 @@ public class CategoryService {
     private final CategoryMapper mapper;
 
     /**
-     * creates a new category
+     * Creates a new category.
      *
      * @param dto the category data
      * @return the created category
@@ -34,19 +33,7 @@ public class CategoryService {
     }
 
     /**
-     *finds a category by its ID
-     *
-     * @param id the category
-     * @return the found category
-     */
-    public CategoryDto getById(Long id) {
-        return repository.findById(id)
-                .map(mapper::toDto)
-                .orElseThrow(() -> new RuntimeException("Category not found with id: "));
-    }
-
-    /**
-     * retrieves all categories, optionally filtered by name
+     * Retrieves all categories, optionally filtered by name.
      *
      * @param name the name filter (optional)
      * @return list of categories
@@ -54,14 +41,41 @@ public class CategoryService {
     public List<CategoryDto> getAll(String name) {
         List<Category> list = repository.findAll();
 
-        if (name != null && !name.isEmpty()) {
+        if (name != null && !name.isBlank()) {
             return list.stream()
                     .filter(c -> c.getName().toLowerCase().contains(name.toLowerCase()))
                     .map(mapper::toDto)
-                    .collect(Collectors.toList());
+                    .toList();
         }
+
         return list.stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    /**
+     * Finds a category by its ID.
+     *
+     * @param id the category ID
+     * @return the found category
+     */
+    public CategoryDto getById(Long id) {
+        return repository.findById(id)
+                .map(mapper::toDto)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Category not found with id: " + id));
+    }
+
+    /**
+     * Deletes a category by its ID.
+     *
+     * @param id the category ID
+     */
+    public void delete(Long id) {
+        if (!repository.existsById(id)) {
+            throw new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Category not found with id: " + id);
+        }
+        repository.deleteById(id);
     }
 }
